--- a/mgmt/Makefile
+++ b/mgmt/Makefile
@@ -16,7 +16,7 @@ clean:
 	rm -f noVNC-$(NOVNC_VERSION).tar.gz
 
 tag_latest:
-	docker tag -f $(NAME):$(VERSION) $(NAME):latest
+	docker tag $(NAME):$(VERSION) $(NAME):latest
 
 run:
 	docker run -v /var/run:/var/run -p 8080:80 -v /var/lib/rancher/vm:/vm $(NAME):$(VERSION)
