--- a/image/rancheros/Makefile
+++ b/image/rancheros/Makefile
@@ -16,7 +16,7 @@ clean:
 	rm -f $(BASE_IMAGE)
 
 tag_latest:
-	docker tag -f $(NAME):$(VERSION) $(NAME):latest
+	docker tag $(NAME):$(VERSION) $(NAME):latest
 
 test:
 	docker run -e "RANCHER_VM=true" --cap-add NET_ADMIN -it -v /var/lib/rancher/vm:/vm --device /dev/kvm:/dev/kvm --device /dev/net/tun:/dev/net/tun \
