--- a/image/windows7/Makefile
+++ b/image/windows7/Makefile
@@ -7,7 +7,7 @@ build:
 	docker build -t $(NAME):$(VERSION) .
 
 tag_latest:
-	docker tag -f $(NAME):$(VERSION) $(NAME):latest
+	docker tag $(NAME):$(VERSION) $(NAME):latest
 
 test:
 	docker run -e "RANCHER_VM=true" --cap-add NET_ADMIN -it -v /var/lib/rancher/vm:/vm --device /dev/kvm:/dev/kvm --device /dev/net/tun:/dev/net/tun \
