--- a/image/base/Dockerfile
+++ b/image/base/Dockerfile
@@ -1,6 +1,6 @@
-FROM ubuntu:14.04.2
+FROM ubuntu:14.04.3
 RUN apt-get update && \
-    apt-get install -y qemu-kvm dnsmasq \
+    apt-get install -y qemu-kvm curl \
 		       bridge-utils genisoimage curl jq
 COPY startvm /var/lib/rancher/startvm
 ENTRYPOINT ["/var/lib/rancher/startvm"]
